@@ -61,8 +61,7 @@
     <dep.commons-lang.version>3.20.0</dep.commons-lang.version>
     <dep.commons-pool.version>2.13.1</dep.commons-pool.version>
     <dep.dropwizard.metrics.version>4.2.39</dep.dropwizard.metrics.version>
-    <!-- Error Prone 2.32+ requires JDK17-->
-    <dep.errorprone.version>2.23.0</dep.errorprone.version>
+    <dep.errorprone.version>2.50.0</dep.errorprone.version>
     <dep.grpc.version>1.65.0</dep.grpc.version>
     <dep.gson.version>2.14.0</dep.gson.version>
     <dep.guava.version>32.1.3-jre</dep.guava.version>
@@ -1788,6 +1787,14 @@
                 <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                 <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                 <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                 <arg>-Xmaxerrs</arg>
                 <arg>-1</arg>
                 <arg>-Xmaxwarns</arg>
@@ -1795,24 +1802,31 @@
                 <arg>-Werror</arg>
                 <!--arg>-Xlint:all</arg-->
                 <arg>-XDcompilePolicy=simple</arg>
+                <arg>--should-stop=ifError=FLOW</arg>
                 <arg>-Xplugin:ErrorProne \
                   -XepAllDisabledChecksAsWarnings \
                   -XepAllSuggestionsAsWarnings \
                   -XepDisableWarningsInGeneratedCode \
                   -XepExcludedPaths:.*/generated-sources/.* \
-                  -Xep:AndroidJdkLibsChecker:OFF \
+                  -Xep:AddNullMarkedToClass:OFF \
+                  -Xep:AddNullMarkedToPackageInfo:OFF \
                   -Xep:BooleanParameter:OFF \
                   -Xep:CanIgnoreReturnValueSuggester:OFF \
+                  -Xep:EffectivelyPrivate:OFF \
+                  -Xep:ExposedPrivateType:OFF \
+                  -Xep:IdentifierName:OFF \
                   -Xep:InconsistentOverloads:OFF \
                   -Xep:InlineMeSuggester:OFF \
                   -Xep:InlineTrivialConstant:OFF \
-                  -Xep:Java7ApiChecker:OFF \
                   -Xep:Java8ApiChecker:OFF \
+                  -Xep:JdkObsolete:OFF \
                   -Xep:StringSplitter:OFF \
+                  -Xep:TooManyParameters:OFF \
                   -Xep:UnnecessaryFinal:OFF \
                   -Xep:Var:OFF \
                   -Xep:Varifier:OFF \
                   -Xep:YodaCondition:OFF</arg>
+                <arg>-XDaddTypeAnnotationsToSymbol=true</arg>
               </compilerArgs>
               <annotationProcessorPaths>
                 <path>
